clusters/another-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: 50ms
spec:
  type: LoadBalancer
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      protocol: TCP
      targetPort: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
