clusters/another-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: 50m
  labels:
    me: "you"
    # you: "me"
  name: test-ingress
  namespace: devops
spec:
  rules:
  - host: foo.bar.test
    http:
      paths:
      - backend:
          service:
            name: test-svc
            port:
              number: 80
        path: /
        pathType: Prefix
